fix: z-index for slider

--- a/css/main.css
+++ b/css/main.css
@@ -923,6 +923,7 @@ body {
   width: 80%;
   margin: 0 auto;
   position: relative;
+  z-index: 1;
 }
 @media (max-width: 1024px) {
   .slider-review {
