--- a/sass/blocks/_slider.scss
+++ b/sass/blocks/_slider.scss
@@ -4,11 +4,12 @@
     width: 80%;
     margin: 0 auto;
     position: relative;
-    
+    z-index: 1;
+
     @media (max-width: 1024px) {
         width: 90%;
     }
-    
+
     @media (max-width: 550px) {
         width: 100%;
     }
